Commiting app layout structure

--- a/myapp/src/app/app.component.html
+++ b/myapp/src/app/app.component.html
@@ -5,10 +5,10 @@
   <div class='pane ' id='menu'>
     <div class="display_content"> </div>
     <div class='main_menu'>
-      <span class="menu_title"> MENU</span>
+      <span class="menu_title">MENU</span>
       <ul>
         <li> Startup</li>
-        <li> Portfolio </li>
+        <li> Blog </li>
         <li> People </li>
       </ul>
     </div>
@@ -16,9 +16,13 @@
 </main>
 <div id='content_viewer'>
   <span id="content">
-    <p> I am an  entrepreneur and a frontend software developer with strong focus on user experience and simplicity.
+    <p> I am a frontend software developer based in Seattle, WA.
+      I'm most excited about creating better living experience for the future.
+      I focus on people and simplicity when solving a design challenge. I'm also a Robotics, Neural net,
+      and Hydroponics Farming enthusiast.
+    <br>
     </p>
     <p id="signature"> -Tanner</p>
   </span>
 </div>
-<button class="resume_download_btn"> Download my Resume </button>
+<button class="resume_download_btn"> Download Resume </button>
