--- a/myapp/src/app/app.component.css
+++ b/myapp/src/app/app.component.css
@@ -60,6 +60,200 @@
         margin-top: 5px; }
 
   #content_viewer {
+    display: inline-block;
+    height: 160px;
+    margin-right: auto;
+    margin-left: auto;
+    width: 80%; }
+    #content_viewer #content {
+      position: inherit;
+      z-index: 101;
+      opacity: .4;
+      height: 90%;
+      width: 80%; }
+      #content_viewer #content h1 {
+        padding-top: 10px;
+        padding-left: 10px;
+        font-size: 14pt; }
+      #content_viewer #content p {
+        width: 100%;
+        opacity: .3;
+        font-weight: inherit;
+        color: inherit;
+        padding: 5%;
+        font-weight: 200;
+        font-size: 12pt; }
+      #content_viewer #content #signature {
+        padding: 1%;
+        text-align: right; }
+
+  .resume_download_btn {
+    display: block;
+    position: static;
+    color: white;
+    background-color: black;
+    opacity: .6;
+    font-weight: bold;
+    box-shadow: 10px 10px grey;
+    font-size: 16pt;
+    height: 50px; } }
+@media (min-width: 1201px) {
+  .main {
+    scroll-snap-points-y: repeat(40%);
+    scroll-snapp-type: mandatory; }
+
+  .icon_bar {
+    position: fixed;
+    opacity: 0.7;
+    display: inline-block;
+    z-index: 100;
+    width: 100%;
+    height: 80px;
+    top: 0px;
+    font-size: 12pt; }
+    .icon_bar img {
+      position: absolute;
+      right: 20px;
+      top: 15px;
+      z-index: 100;
+      opacity: 0.8;
+      border-radius: 50%;
+      width: auto;
+      height: 160px; }
+
+  .pane {
+    color: #ffffff;
+    position: relative;
+    z-index: 98;
+    background-color: black;
+    opacity: 0.7;
+    width: 100%;
+    height: 80%; }
+    .pane .display_content {
+      display: none; }
+    .pane .main_menu {
+      background-color: inherit;
+      position: absolute;
+      bottom: 10px;
+      height: auto;
+      z-index: 99;
+      display: inline-block;
+      text-align: center;
+      letter-spacing: 4px; }
+      .pane .main_menu .menu_title {
+        opacity: .2;
+        z-index: 99;
+        font-size: 100pt;
+        font-weight: 300;
+        width: 30%;
+        border-bottom: solid white;
+        border-bottom-width: 1px; }
+      .pane .main_menu li {
+        opacity: .6;
+        font-size: 60pt;
+        font-weight: 300; }
+      .pane .main_menu li:first-child {
+        margin-top: 5px; }
+
+  #content_viewer {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    height: 160px; }
+    #content_viewer #content {
+      position: inherit;
+      z-index: 101;
+      opacity: .4;
+      height: 90%;
+      width: 90%; }
+      #content_viewer #content h1 {
+        padding-top: 10px;
+        padding-left: 10px;
+        font-size: 32pt; }
+      #content_viewer #content p {
+        opacity: .3;
+        font-weight: inherit;
+        color: inherit;
+        padding: 20px;
+        font-weight: 200;
+        font-size: 24pt; }
+      #content_viewer #content #signature {
+        text-align: right; }
+
+  .resume_download_btn {
+    display: block;
+    color: white;
+    background-color: black;
+    opacity: .6;
+    font-weight: bold;
+    font-size: 28pt;
+    height: 50px;
+    width: 40%;
+    margin-right: auto;
+    margin-left: auto; } }
+@media (max-width: 1200px) and (min-width: 701px) {
+  .main {
+    scroll-snap-points-y: repeat(40%);
+    scroll-snapp-type: mandatory; }
+
+  .icon_bar {
+    position: fixed;
+    opacity: 0.7;
+    display: inline-block;
+    z-index: 100;
+    width: 100%;
+    height: 80px;
+    top: 0px;
+    font-size: 12pt; }
+    .icon_bar img {
+      position: absolute;
+      right: 20px;
+      top: 15px;
+      z-index: 100;
+      opacity: 0.8;
+      border-radius: 50%;
+      width: auto;
+      height: 80px; }
+
+  .menu_btn:active img {
+    opacity: 1; }
+
+  .pane {
+    color: #ffffff;
+    position: relative;
+    z-index: 98;
+    background-color: black;
+    opacity: 0.7;
+    width: 100%;
+    height: 100%; }
+    .pane .display_content {
+      display: none; }
+    .pane .main_menu {
+      background-color: inherit;
+      position: absolute;
+      bottom: 10px;
+      height: auto;
+      z-index: 99;
+      display: inline-block;
+      text-align: center;
+      letter-spacing: 4px; }
+      .pane .main_menu .menu_title {
+        opacity: .2;
+        z-index: 99;
+        font-size: 40pt;
+        font-weight: 300;
+        width: 30%;
+        border-bottom: solid white;
+        border-bottom-width: 1px; }
+      .pane .main_menu li {
+        opacity: .6;
+        font-size: 30pt;
+        font-weight: 300; }
+      .pane .main_menu li:first-child {
+        margin-top: 5px; }
+
+  #content_viewer {
     height: 160px; }
     #content_viewer #content {
       position: inherit;
@@ -83,104 +277,11 @@
 
   .resume_download_btn {
     color: white;
-    background-color: #b21a00;
-    opacity: .7;
+    background-color: black;
+    opacity: .6;
+    font-weight: bold;
     box-shadow: 10px 10px grey;
     font-size: 16pt;
-    height: 30px; } }
-@media (min-width: 1201px) {
-  .background {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-image: none;
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    filter: blur(0px); }
-
-  .welcome {
-    position: absolute;
-    text-align: left;
-    top: 5%;
-    padding-left: 3%;
-    padding-bottom: 50%;
-    font-size: 30pt;
-    color: blue; }
-
-  .intro {
-    position: relative;
-    display: block;
-    top: 50%;
-    text-align: center;
-    font-size: 1.4em;
-    font-style: italic; }
-
-  .signout {
-    position: absolute;
-    bottom: 20px;
-    right: 50px;
-    font-size: 1em; }
-
-  .button {
-    background-color: red;
-    color: #ffffff;
-    width: 100%;
-    height: 3%; }
-
-  .slide {
-    color: #ffffff;
-    position: relative;
-    background-color: black;
-    opacity: 0.8;
-    width: 100%;
-    height: 100%;
-    font-size: 250%; } }
-@media (max-width: 1200px) and (min-width: 701px) {
-  .background {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-image: none;
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    filter: blur(0px); }
-
-  .welcome {
-    position: absolute;
-    text-align: left;
-    top: 5%;
-    padding-left: 3%;
-    padding-bottom: 50%;
-    font-size: 30pt;
-    color: red; }
-
-  .intro {
-    position: relative;
-    display: block;
-    top: 50%;
-    text-align: center;
-    font-size: 1.4em;
-    font-style: italic; }
-
-  .signout {
-    position: absolute;
-    bottom: 20px;
-    right: 50px;
-    font-size: 1em; }
-
-  .button {
-    background-color: red;
-    color: #ffffff;
-    width: 100%;
-    height: 3%; }
-
-  .slide {
-    color: #ffffff;
-    position: relative;
-    background-color: black;
-    opacity: 0.8;
-    width: 100%;
-    height: 100%;
-    font-size: 250%; } }
+    height: 50px; } }
 
 /*# sourceMappingURL=app.component.css.map */
