--- a/myapp/src/app/app.component.scss
+++ b/myapp/src/app/app.component.scss
@@ -6,12 +6,14 @@
 $icon_bar_height: 80px;
 
 @media(max-width: $breakpoint-mobile) {
-  .main{
-    scroll-snap-points-y:repeat(40%);
+  .main {
+    scroll-snap-points-y: repeat(40%);
     scroll-snapp-type: mandatory;
+    background-color: black;
+    opacity: .7;
   }
   .icon_bar {
-    position: fixed;
+    position: relative;
     opacity: 0.7;
     display: inline-block;
     z-index: 100;
@@ -19,15 +21,16 @@ $icon_bar_height: 80px;
     height: $icon_bar_height;
     top: 0px;
     font-size: 12pt;
+    vertical-align: middle;
     img {
       position: absolute;
-      right: 20px;
-      top: 15px;
+      right: 30px;
+      top: 30px;
       z-index: 100;
       opacity: $opacity_inactive;
       border-radius: 50%;
       width: auto;
-      height: 80px;
+      height: 60px;
     }
   }
   .menu_btn:active {
@@ -37,37 +40,35 @@ $icon_bar_height: 80px;
   }
   .pane {
     color: $white;
-    position: relative;
+    position: static;
     z-index: 98;
     background-color: black;
     opacity: 0.7;
     width: 100%;
-    height: 100%;
-    .display_content{
-      display: none;
-    }
+    height: auto;
     .main_menu {
       background-color: inherit;
       position: absolute;
-      bottom: 10px;
+      bottom: .5%;
       height: auto;
       z-index: 99;
       display: inline-block;
       text-align: center;
-      letter-spacing: 4px;
       .menu_title {
         opacity: .2;
         z-index: 99;
-        font-size: 40pt;
+        font-size: 50pt;
         font-weight: 300;
         width: 30%;
+        letter-spacing: 4pt;
         border-bottom: solid white;
         border-bottom-width: 1px;
       }
       li {
         opacity: .6;
-        font-size: 30pt;
-        font-weight: 300;
+        font-size: 40pt;
+        font-weight: 100;
+        letter-spacing: 1pt;
       }
       li:first-child {
         margin-top: 5px;
@@ -75,55 +76,92 @@ $icon_bar_height: 80px;
     }
   }
   #content_viewer {
-    display: inline-block;
-    height: 160px;
+    padding: 10px;
+    opacity: .7;
+    position: static;
+    height: auto;
+    width: 90%;
     margin-right: auto;
     margin-left: auto;
-    width: 80%;
     #content {
-      position: inherit;
+      position: relative;
       z-index: 101;
-      opacity: .4;
-      height: 90%;
-      width: 80%;
+      height: auto;
+      width: 90%;
       h1 {
         padding-top: 10px;
         padding-left: 10px;
         font-size: 14pt;
       }
-      p {
+      p{
+        opacity: .5;
+      }
+      #signature {
+        display: inline-block;
+        position: relative;
         width: 100%;
-        opacity: .3;
         font-weight: inherit;
         color: inherit;
         padding: 5%;
-        font-weight: 200;
-        font-size: 12pt;
-      }
-      #signature {
-        padding: 1%;
-        text-align: right;
+        font-size: 11pt;
+
+        #me{
+          display: block;
+          position: relative;
+          right:0;
+          width: 50px;
+          height: auto;
+          margin-left: 70%;
+        }
+        #tag{
+          opacity: .5;
+          padding: 1%;
+          margin-left: 65%;
+        }
       }
     }
   }
-  .resume_download_btn{
+  #footer {
     display: block;
-    position: static;
-    color: white;
+    position: relative;
+    height: 7%;
     background-color: black;
     opacity: .6;
-    font-weight: bold;
-    box-shadow: 10px 10px grey;
-    font-size: 16pt;
-    height: 50px;
+    .site_version {
+      color: white;
+      position: absolute;
+      bottom: 3px;
+      left: 2%;
+      padding: 3px;
+      font-weight: 500;
+      font-size: 6pt;
+      height: auto;
+      width: auto;
+      opacity: .6;
+    }
+    .icons{
+      color: white;
+      padding: 1px;
+      width: auto;
+      height: auto;
+      display: block;
+      position: absolute;
+      background-color: black;
+      right: 5%;
+      bottom: 3px;
+      opacity: .6;
+      #framework_icon{
+        width: 20px;
+        height:auto;
+      }
+    }
   }
 }
 
 @media (min-width: $breakpoint-tablet+1) {
 
   .main{
-    scroll-snap-points-y:repeat(40%);
-    scroll-snapp-type: mandatory;
+    height: 60%;
   }
   .icon_bar {
     position: fixed;
@@ -153,14 +191,14 @@ $icon_bar_height: 80px;
     background-color: black;
     opacity: 0.7;
     width: 100%;
-    height: 80%;
+    height: auto;
     .display_content{
       display: none;
     }
     .main_menu {
       background-color: inherit;
       position:absolute;
-      bottom: 10px;
+      top: 10px;
       height: auto;
       z-index: 99;
       display: inline-block;
