--- a/myapp/src/app/app.component.scss
+++ b/myapp/src/app/app.component.scss
@@ -12,13 +12,190 @@ $icon_bar_height: 80px;
     background-color: black;
     opacity: .7;
   }
+  .pane_top {
+    background-color: darkorange;
+    position: relative;
+    opacity: 0.7;
+    display: block;
+    z-index: 100;
+    width: 100%;
+    height: 150px;
+    font-size: 12pt;
+    .about {
+      padding: 10px;
+      position: absolute;
+      text-align: left;
+      p, h4 {
+        padding: 5px;
+        display: inline-flex;
+      }
+    }
+    img {
+      float: left;
+      position: absolute;
+      right: 15px;
+      top: 15px;
+      padding: 15px;
+      z-index: 100;
+      opacity: $opacity_inactive;
+      border-radius: 50%;
+      width: auto;
+      height: 90px;
+    }
+  }
+  .menu_btn:active {
+    img {
+      opacity: 1;
+    }
+  }
+  #pane_middle {
+    color: $white;
+    position: static;
+    z-index: 98;
+    background-color: black;
+    opacity: 0.7;
+    width: 100%;
+    height: auto;
+    .main_menu {
+      background-color: inherit;
+      position: absolute;
+      height: auto;
+      z-index: 99;
+      display: inline-block;
+      text-align: center;
+      bottom:15px;
+      .menu_title {
+        opacity: .2;
+        z-index: 99;
+        font-size: 45pt;
+        font-weight: 300;
+        width: 30%;
+        letter-spacing: 4pt;
+        border-bottom: solid white;
+        border-bottom-width: 1px;
+      }
+      li {
+        opacity: .6;
+        font-size: 40pt;
+        font-weight: 100;
+        letter-spacing: 1pt;
+      }
+      li:first-child {
+        margin-top: 5px;
+      }
+    }
+  }
+  #slogan {
+    padding: 10px;
+    opacity: .7;
+    position: static;
+    height: auto;
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
+    #content {
+      position: relative;
+      z-index: 101;
+      height: auto;
+      width: 90%;
+      h1 {
+        padding-top: 10px;
+        padding-left: 10px;
+      }
+      p{
+        opacity: .5;
+        font-size: 10pt;
+        font-style: italic;
+      }
+      #signature {
+        display: inline-block;
+        position: relative;
+        width: 100%;
+        font-weight: inherit;
+        color: inherit;
+        //padding: 2%;
+        font-size: 10pt;
+        #me{
+          display: block;
+          position: relative;
+          right: 2px;
+          width: 50px;
+          height: auto;
+          margin-left: 70%;
+        }
+        #tag{
+          opacity: .5;
+          padding: 1%;
+          margin-left: 65%;
+        }
+      }
+    }
+  }
+  #footer {
+    display: block;
+    position: relative;
+    height: 40px;
+    background-color: black;
+    opacity: .6;
+    width: 100%;
+    .site_slogan{
+      padding: 0;
+    }
+    .site_version {
+      color: white;
+      position: absolute;
+      bottom: 2px;
+      left: 2%;
+      padding: 5px;
+      font-weight: 500;
+      font-size: 6pt;
+      height: auto;
+      width: auto;
+      opacity: .6;
+    }
+    .contact{
+      width:auto;
+      height:auto;
+      color: darkorange;
+      position: absolute;
+      top: 5px;
+      left: 50%;
+      font-size: 10pt;
+      opacity: .7;
+    }
+    .icons{
+      color: white;
+      padding: 2px;
+      width: auto;
+      height: auto;
+      display: block;
+      position: absolute;
+      background-color: black;
+      right: 2%;
+      bottom: 4px;
+      opacity: .6;
+      #framework_icon{
+        width: 22px;
+        height:auto;
+      }
+    }
+  }
+}
+
+@media (min-width: $breakpoint-mobile + 1) and (max-width: $breakpoint-tablet) {
+  .main {
+    scroll-snap-points-y: repeat(40%);
+    scroll-snapp-type: mandatory;
+    background-color: black;
+    opacity: .7;
+  }
   .icon_bar {
     position: relative;
     opacity: 0.7;
     display: inline-block;
     z-index: 100;
     width: 100%;
-    height: $icon_bar_height;
+    height: 300px;
     top: 0px;
     font-size: 12pt;
     vertical-align: middle;
@@ -75,12 +252,12 @@ $icon_bar_height: 80px;
       }
     }
   }
-  #content_viewer {
+  #slogan {
     padding: 10px;
     opacity: .7;
     position: static;
     height: auto;
-    width: 90%;
+    width: 70%;
     margin-right: auto;
     margin-left: auto;
     #content {
@@ -100,9 +277,10 @@ $icon_bar_height: 80px;
         display: inline-block;
         position: relative;
         width: 100%;
+        height: auto;
         font-weight: inherit;
         color: inherit;
-        padding: 5%;
+        padding: 2%;
         font-size: 11pt;
 
         #me{
@@ -116,7 +294,7 @@ $icon_bar_height: 80px;
         #tag{
           opacity: .5;
           padding: 1%;
-          margin-left: 65%;
+          margin-left: 70%;
         }
       }
     }
@@ -124,13 +302,17 @@ $icon_bar_height: 80px;
   #footer {
     display: block;
     position: relative;
-    height: 7%;
+    height: 40px;
     background-color: black;
     opacity: .6;
+    width: 100%;
+    .site_slogan{
+
+    }
     .site_version {
       color: white;
       position: absolute;
-      bottom: 3px;
+      bottom: 5px;
       left: 2%;
       padding: 3px;
       font-weight: 500;
@@ -147,8 +329,8 @@ $icon_bar_height: 80px;
       display: block;
       position: absolute;
       background-color: black;
-      right: 5%;
-      bottom: 3px;
+      right: 2%;
+      bottom: 5px;
       opacity: .6;
       #framework_icon{
         width: 20px;
@@ -157,219 +339,3 @@ $icon_bar_height: 80px;
     }
   }
 }
-
-@media (min-width: $breakpoint-tablet+1) {
-
-  .main{
-    height: 60%;
-  }
-  .icon_bar {
-    position: fixed;
-    opacity: 0.7;
-    display: inline-block;
-    z-index: 100;
-    width: 100%;
-    height: $icon_bar_height;
-    top: 0px;
-    font-size: 12pt;
-    img {
-      position: absolute;
-      right: 20px;
-      top: 15px;
-      z-index: 100;
-      opacity: $opacity_inactive;
-      border-radius: 50%;
-      width: auto;
-      height: 160px;
-    }
-  }
-
-  .pane {
-    color: $white;
-    position: relative;
-    z-index: 98;
-    background-color: black;
-    opacity: 0.7;
-    width: 100%;
-    height: auto;
-    .display_content{
-      display: none;
-    }
-    .main_menu {
-      background-color: inherit;
-      position:absolute;
-      top: 10px;
-      height: auto;
-      z-index: 99;
-      display: inline-block;
-      text-align: center;
-      letter-spacing: 4px;
-      .menu_title {
-        opacity: .2;
-        z-index: 99;
-        font-size: 100pt;
-        font-weight: 300;
-        width: 30%;
-        border-bottom: solid white;
-        border-bottom-width: 1px;
-      }
-      li {
-        opacity: .6;
-        font-size: 60pt;
-        font-weight: 300;
-      }
-      li:first-child {
-        margin-top: 5px;
-      }
-    }
-  }
-  #content_viewer {
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-    width: 70%;
-    height: 160px;
-    #content {
-      position: inherit;
-      z-index: 101;
-      opacity: .4;
-      height: 90%;
-      width: 90%;
-      h1 {
-        padding-top: 10px;
-        padding-left: 10px;
-        font-size: 32pt;
-      }
-      p {
-        opacity: .3;
-        font-weight: inherit;
-        color: inherit;
-        padding: 20px;
-        font-weight: 200;
-        font-size: 24pt;
-      }
-      #signature {
-        text-align: right;
-      }
-    }
-  }
-  .resume_download_btn{
-    display:block;
-    color: white;
-    background-color: black;
-    opacity: .6;
-    font-weight: bold;
-    font-size: 28pt;
-    height: 50px;
-    width:40%;
-    margin-right: auto;
-    margin-left: auto;
-  }
-}
-
-@media(max-width: $breakpoint-tablet) and (min-width: $breakpoint-mobile+1) {
-  .main{
-    scroll-snap-points-y:repeat(40%);
-    scroll-snapp-type: mandatory;
-  }
-  .icon_bar {
-    position: fixed;
-    opacity: 0.7;
-    display: inline-block;
-    z-index: 100;
-    width: 100%;
-    height: $icon_bar_height;
-    top: 0px;
-    font-size: 12pt;
-    img {
-      position: absolute;
-      right: 20px;
-      top: 15px;
-      z-index: 100;
-      opacity: $opacity_inactive;
-      border-radius: 50%;
-      width: auto;
-      height: 80px;
-    }
-  }
-  .menu_btn:active {
-    img {
-      opacity: 1;
-    }
-  }
-  .pane {
-    color: $white;
-    position: relative;
-    z-index: 98;
-    background-color: black;
-    opacity: 0.7;
-    width: 100%;
-    height: 100%;
-    .display_content{
-      display: none;
-    }
-    .main_menu {
-      background-color: inherit;
-      position:absolute;
-      bottom: 10px;
-      height: auto;
-      z-index: 99;
-      display: inline-block;
-      text-align: center;
-      letter-spacing: 4px;
-      .menu_title {
-        opacity: .2;
-        z-index: 99;
-        font-size: 40pt;
-        font-weight: 300;
-        width: 30%;
-        border-bottom: solid white;
-        border-bottom-width: 1px;
-      }
-      li {
-        opacity: .6;
-        font-size: 30pt;
-        font-weight: 300;
-      }
-      li:first-child {
-        margin-top: 5px;
-      }
-    }
-  }
-  #content_viewer {
-    height: 160px;
-    #content {
-      position: inherit;
-      z-index: 101;
-      opacity: .4;
-      height: 90%;
-      width: 90%;
-      h1 {
-        padding-top: 10px;
-        padding-left: 10px;
-        font-size: 16pt;
-      }
-      p {
-        opacity: .3;
-        font-weight: inherit;
-        color: inherit;
-        padding: 20px;
-        font-weight: 200;
-        font-size: 12pt;
-      }
-      #signature {
-        text-align: right;
-      }
-    }
-  }
-  .resume_download_btn{
-    color: white;
-    background-color: black;
-    opacity: .6;
-    font-weight: bold;
-    box-shadow: 10px 10px grey;
-    font-size: 16pt;
-    height: 50px;
-  }
-}
-
