--- a/myapp/src/app/app.component.css
+++ b/myapp/src/app/app.component.css
@@ -1,4 +1,175 @@
 @media (max-width: 700px) {
+  .pane_top {
+    background-color: darkorange;
+    position: relative;
+    opacity: 0.7;
+    display: block;
+    z-index: 100;
+    width: 100%;
+    height: 120px;
+    font-size: 12pt; }
+    .pane_top .about {
+      position: static;
+      height: 100%; }
+      .pane_top .about a, .pane_top .about p, .pane_top .about h3 {
+        display: inline-flex; }
+      .pane_top .about h3 {
+        padding: 20px;
+        padding-bottom: 0px;
+        margin-top: 4px; }
+      .pane_top .about p {
+        opacity: .7;
+        letter-spacing: -.4pt;
+        position: relative;
+        padding-left: 20px;
+        font-size: 11pt;
+        text-align: left;
+        top: 14px; }
+    .pane_top img#self {
+      float: left;
+      position: absolute;
+      opacity: .9;
+      right: 5px;
+      top: 10px;
+      padding: 10px;
+      z-index: 100;
+      border-radius: 50%;
+      width: auto;
+      height: 75px; }
+
+  .main {
+    background-color: black;
+    opacity: .7;
+    height: 100%; }
+
+  #pane_middle {
+    color: #ffffff;
+    position: static;
+    z-index: 98;
+    background-color: black;
+    opacity: 0.7;
+    width: 100%;
+    height: auto; }
+    #pane_middle .main_menu {
+      background-color: inherit;
+      position: relative;
+      height: auto;
+      top: 30px;
+      z-index: 99;
+      display: inline-block;
+      text-align: center; }
+      #pane_middle .main_menu .menu_title {
+        opacity: .2;
+        z-index: 99;
+        font-size: 50pt;
+        font-weight: 300;
+        font-stretch: ultra-expanded;
+        width: 50%;
+        letter-spacing: 4pt;
+        border-bottom: solid white;
+        border-bottom-width: 1px; }
+      #pane_middle .main_menu li {
+        transform: scaleY(1.8);
+        opacity: .6;
+        font-size: 30pt;
+        font-weight: 100;
+        letter-spacing: 0pt;
+        padding-bottom: 15px; }
+      #pane_middle .main_menu li:hover {
+        color: darkorange; }
+      #pane_middle .main_menu li:first-child {
+        padding-top: 10px; }
+
+  #slogan {
+    padding: 10px;
+    opacity: .7;
+    position: static;
+    height: 100px;
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto; }
+    #slogan #content {
+      z-index: 101;
+      height: auto;
+      auto: 90%; }
+      #slogan #content h4 {
+        padding-top: 10px;
+        padding-left: 10px; }
+      #slogan #content p {
+        top: 10px;
+        width: 90%;
+        opacity: .5;
+        font-size: 10pt;
+        font-style: italic; }
+      #slogan #content img#me {
+        opacity: .7;
+        float: right;
+        width: 50px;
+        height: auto;
+        margin-left: 5%; }
+
+  #footer {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 40px; }
+    #footer ul {
+      opacity: .2;
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: auto;
+      bottom: 5px;
+      padding-bottom: 0;
+      list-style-type: none;
+      overflow: hidden; }
+      #footer ul li {
+        float: left;
+        width: 25%;
+        align-content: center; }
+        #footer ul li a {
+          opacity: .7;
+          width: 100%;
+          height: 100%; }
+          #footer ul li a img {
+            display: block;
+            margin: auto;
+            width: 25px;
+            height: 25px; }
+      #footer ul li:nth-of-type(3) {
+        padding-top: 2px; }
+        #footer ul li:nth-of-type(3) a img {
+          width: auto;
+          height: 22px; }
+    #footer .site_slogan {
+      text-align: center;
+      font-size: 8pt; }
+    #footer .site_version {
+      color: white;
+      position: static;
+      text-align: center;
+      padding: 5px;
+      font-style: italic;
+      font-weight: 500;
+      font-size: 8pt;
+      height: auto;
+      width: auto;
+      opacity: .6; }
+    #footer .icons {
+      padding: 2px;
+      width: auto;
+      height: auto;
+      display: block;
+      position: absolute;
+      background-color: black;
+      right: 2%;
+      bottom: 8px;
+      opacity: .6;
+      vertical-align: middle; }
+      #footer .icons #framework_icon {
+        width: 22px;
+        height: auto; } }
+@media (min-width: 701px) and (max-width: 1200px) {
   .main {
     scroll-snap-points-y: repeat(40%);
     scroll-snapp-type: mandatory;
@@ -11,7 +182,7 @@
     display: inline-block;
     z-index: 100;
     width: 100%;
-    height: 80px;
+    height: 300px;
     top: 0px;
     font-size: 12pt;
     vertical-align: middle; }
@@ -61,55 +232,57 @@
       .pane .main_menu li:first-child {
         margin-top: 5px; }
 
-  #content_viewer {
+  #slogan {
     padding: 10px;
     opacity: .7;
     position: static;
     height: auto;
-    width: 90%;
+    width: 70%;
     margin-right: auto;
     margin-left: auto; }
-    #content_viewer #content {
+    #slogan #content {
       position: relative;
       z-index: 101;
       height: auto;
       width: 90%; }
-      #content_viewer #content h1 {
+      #slogan #content h1 {
         padding-top: 10px;
         padding-left: 10px;
         font-size: 14pt; }
-      #content_viewer #content p {
+      #slogan #content p {
         opacity: .5; }
-      #content_viewer #content #signature {
+      #slogan #content #signature {
         display: inline-block;
         position: relative;
         width: 100%;
+        height: auto;
         font-weight: inherit;
         color: inherit;
-        padding: 5%;
+        padding: 2%;
         font-size: 11pt; }
-        #content_viewer #content #signature #me {
+        #slogan #content #signature #me {
           display: block;
           position: relative;
           right: 0;
           width: 50px;
           height: auto;
           margin-left: 70%; }
-        #content_viewer #content #signature #tag {
+        #slogan #content #signature #tag {
           opacity: .5;
           padding: 1%;
-          margin-left: 65%; }
+          margin-left: 70%; }
 
   #footer {
     display: block;
     position: relative;
-    height: 7%;
+    height: 40px;
     background-color: black;
-    opacity: .6; }
+    opacity: .6;
+    width: 100%; }
     #footer .site_version {
       color: white;
       position: absolute;
-      bottom: 3px;
+      bottom: 5px;
       left: 2%;
       padding: 3px;
       font-weight: 500;
@@ -125,196 +298,11 @@
       display: block;
       position: absolute;
       background-color: black;
-      right: 5%;
-      bottom: 3px;
+      right: 2%;
+      bottom: 5px;
       opacity: .6; }
       #footer .icons #framework_icon {
         width: 20px;
         height: auto; } }
-@media (min-width: 1201px) {
-  .main {
-    height: 60%; }
-
-  .icon_bar {
-    position: fixed;
-    opacity: 0.7;
-    display: inline-block;
-    z-index: 100;
-    width: 100%;
-    height: 80px;
-    top: 0px;
-    font-size: 12pt; }
-    .icon_bar img {
-      position: absolute;
-      right: 20px;
-      top: 15px;
-      z-index: 100;
-      opacity: 0.8;
-      border-radius: 50%;
-      width: auto;
-      height: 160px; }
-
-  .pane {
-    color: #ffffff;
-    position: relative;
-    z-index: 98;
-    background-color: black;
-    opacity: 0.7;
-    width: 100%;
-    height: auto; }
-    .pane .display_content {
-      display: none; }
-    .pane .main_menu {
-      background-color: inherit;
-      position: absolute;
-      top: 10px;
-      height: auto;
-      z-index: 99;
-      display: inline-block;
-      text-align: center;
-      letter-spacing: 4px; }
-      .pane .main_menu .menu_title {
-        opacity: .2;
-        z-index: 99;
-        font-size: 100pt;
-        font-weight: 300;
-        width: 30%;
-        border-bottom: solid white;
-        border-bottom-width: 1px; }
-      .pane .main_menu li {
-        opacity: .6;
-        font-size: 60pt;
-        font-weight: 300; }
-      .pane .main_menu li:first-child {
-        margin-top: 5px; }
-
-  #content_viewer {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
-    height: 160px; }
-    #content_viewer #content {
-      position: inherit;
-      z-index: 101;
-      opacity: .4;
-      height: 90%;
-      width: 90%; }
-      #content_viewer #content h1 {
-        padding-top: 10px;
-        padding-left: 10px;
-        font-size: 32pt; }
-      #content_viewer #content p {
-        opacity: .3;
-        font-weight: inherit;
-        color: inherit;
-        padding: 20px;
-        font-weight: 200;
-        font-size: 24pt; }
-      #content_viewer #content #signature {
-        text-align: right; }
-
-  .resume_download_btn {
-    display: block;
-    color: white;
-    background-color: black;
-    opacity: .6;
-    font-weight: bold;
-    font-size: 28pt;
-    height: 50px;
-    width: 40%;
-    margin-right: auto;
-    margin-left: auto; } }
-@media (max-width: 1200px) and (min-width: 701px) {
-  .main {
-    scroll-snap-points-y: repeat(40%);
-    scroll-snapp-type: mandatory; }
-
-  .icon_bar {
-    position: fixed;
-    opacity: 0.7;
-    display: inline-block;
-    z-index: 100;
-    width: 100%;
-    height: 80px;
-    top: 0px;
-    font-size: 12pt; }
-    .icon_bar img {
-      position: absolute;
-      right: 20px;
-      top: 15px;
-      z-index: 100;
-      opacity: 0.8;
-      border-radius: 50%;
-      width: auto;
-      height: 80px; }
-
-  .menu_btn:active img {
-    opacity: 1; }
-
-  .pane {
-    color: #ffffff;
-    position: relative;
-    z-index: 98;
-    background-color: black;
-    opacity: 0.7;
-    width: 100%;
-    height: 100%; }
-    .pane .display_content {
-      display: none; }
-    .pane .main_menu {
-      background-color: inherit;
-      position: absolute;
-      bottom: 10px;
-      height: auto;
-      z-index: 99;
-      display: inline-block;
-      text-align: center;
-      letter-spacing: 4px; }
-      .pane .main_menu .menu_title {
-        opacity: .2;
-        z-index: 99;
-        font-size: 40pt;
-        font-weight: 300;
-        width: 30%;
-        border-bottom: solid white;
-        border-bottom-width: 1px; }
-      .pane .main_menu li {
-        opacity: .6;
-        font-size: 30pt;
-        font-weight: 300; }
-      .pane .main_menu li:first-child {
-        margin-top: 5px; }
-
-  #content_viewer {
-    height: 160px; }
-    #content_viewer #content {
-      position: inherit;
-      z-index: 101;
-      opacity: .4;
-      height: 90%;
-      width: 90%; }
-      #content_viewer #content h1 {
-        padding-top: 10px;
-        padding-left: 10px;
-        font-size: 16pt; }
-      #content_viewer #content p {
-        opacity: .3;
-        font-weight: inherit;
-        color: inherit;
-        padding: 20px;
-        font-weight: 200;
-        font-size: 12pt; }
-      #content_viewer #content #signature {
-        text-align: right; }
-
-  .resume_download_btn {
-    color: white;
-    background-color: black;
-    opacity: .6;
-    font-weight: bold;
-    box-shadow: 10px 10px grey;
-    font-size: 16pt;
-    height: 50px; } }
 
 /*# sourceMappingURL=app.component.css.map */
