added menu onClick functionalities

--- a/myapp/src/app/app.component.css
+++ b/myapp/src/app/app.component.css
@@ -22,15 +22,19 @@
         letter-spacing: -.4pt;
         position: relative;
         padding-left: 20px;
-        font-size: 11pt;
+        font-size: 10pt;
         text-align: left;
         top: 14px; }
+      .pane_top .about p#slogan {
+        position: relative;
+        bottom: 15px;
+        font-size: 9pt; }
     .pane_top img#self {
       float: left;
       position: absolute;
       opacity: .9;
       right: 5px;
-      top: 10px;
+      top: 15px;
       padding: 10px;
       z-index: 100;
       border-radius: 50%;
@@ -42,71 +46,89 @@
     opacity: .7;
     height: 100%; }
 
-  #pane_middle {
+  #visual_pane {
     color: #ffffff;
+    width: 100%;
+    height: auto;
     position: static;
     z-index: 98;
     background-color: black;
-    opacity: 0.7;
-    width: 100%;
-    height: auto; }
-    #pane_middle .main_menu {
+    opacity: 0.7; }
+    #visual_pane .main_menu {
       background-color: inherit;
-      position: relative;
+      position: absolute;
       height: auto;
-      top: 30px;
+      bottom: 20px;
       z-index: 99;
       display: inline-block;
       text-align: center; }
-      #pane_middle .main_menu .menu_title {
-        opacity: .2;
-        z-index: 99;
-        font-size: 50pt;
-        font-weight: 300;
-        font-stretch: ultra-expanded;
-        width: 50%;
-        letter-spacing: 4pt;
-        border-bottom: solid white;
-        border-bottom-width: 1px; }
-      #pane_middle .main_menu li {
-        transform: scaleY(1.8);
+      #visual_pane .main_menu .menu_title_wrapper {
+        width: auto;
+        height: auto;
+        z-index: 99; }
+        #visual_pane .main_menu .menu_title_wrapper .menu_title {
+          letter-spacing: 2pt;
+          transform: scaleY(3);
+          opacity: .2;
+          font-size: 40pt;
+          font-weight: 500;
+          padding-bottom: 10px; }
+      #visual_pane .main_menu li {
         opacity: .6;
-        font-size: 30pt;
+        font-size: 35pt;
         font-weight: 100;
-        letter-spacing: 0pt;
+        letter-spacing: 3pt;
         padding-bottom: 15px; }
-      #pane_middle .main_menu li:hover {
+      #visual_pane .main_menu li.selected {
+        color: red;
+        font-size: 35pt;
         color: darkorange; }
-      #pane_middle .main_menu li:first-child {
+      #visual_pane .main_menu li:first-child {
         padding-top: 10px; }
 
-  #slogan {
+  #monolog_pane {
+    position: static;
     padding: 10px;
     opacity: .7;
     position: static;
-    height: 100px;
+    height: auto;
     width: 90%;
     margin-right: auto;
     margin-left: auto; }
-    #slogan #content {
+    #monolog_pane span#content {
       z-index: 101;
-      height: auto;
-      auto: 90%; }
-      #slogan #content h4 {
+      height: auto; }
+      #monolog_pane span#content h4 {
         padding-top: 10px;
         padding-left: 10px; }
-      #slogan #content p {
+      #monolog_pane span#content p {
         top: 10px;
         width: 90%;
         opacity: .5;
         font-size: 10pt;
         font-style: italic; }
-      #slogan #content img#me {
+      #monolog_pane span#content img#me {
         opacity: .7;
         float: right;
         width: 50px;
         height: auto;
         margin-left: 5%; }
+
+  div#dummy_menu {
+    position: relative;
+    top: 10px;
+    padding: 2px;
+    width: 100%;
+    height: auto;
+    opacity: .7;
+    font-size: 10pt;
+    font-style: italic;
+    letter-spacing: 2pt;
+    color: darkorange; }
+    div#dummy_menu span.hor_line {
+      letter-spacing: 0pt;
+      color: darkorange;
+      opacity: 1; }
 
   #footer {
     display: block;
