--- a/myapp/src/app/app.component.css
+++ b/myapp/src/app/app.component.css
@@ -7,7 +7,7 @@
     z-index: 100;
     width: 100%;
     height: 120px;
-    font-size: 12pt; }
+    font-size: 14pt; }
     .pane_top .about {
       position: static;
       height: 100%; }
@@ -19,16 +19,16 @@
         margin-top: 4px; }
       .pane_top .about p {
         opacity: .7;
-        letter-spacing: -.4pt;
+        letter-spacing: 2pt;
         position: relative;
         padding-left: 20px;
-        font-size: 10pt;
+        font-size: 12pt;
         text-align: left;
         top: 14px; }
       .pane_top .about p#slogan {
         position: relative;
         bottom: 15px;
-        font-size: 9pt; }
+        font-size: 11pt; }
     .pane_top img#self {
       float: left;
       position: absolute;
@@ -41,7 +41,7 @@
       width: auto;
       height: 75px; }
 
-  .main {
+  #main {
     background-color: black;
     opacity: .7;
     height: 100%; }
@@ -51,9 +51,7 @@
     width: 100%;
     height: auto;
     position: static;
-    z-index: 98;
-    background-color: black;
-    opacity: 0.7; }
+    z-index: 98; }
     #visual_pane .main_menu {
       background-color: inherit;
       position: absolute;
@@ -67,20 +65,17 @@
         height: auto;
         z-index: 99; }
         #visual_pane .main_menu .menu_title_wrapper .menu_title {
-          letter-spacing: 2pt;
-          transform: scaleY(3);
+          letter-spacing: 4pt;
           opacity: .2;
-          font-size: 40pt;
-          font-weight: 500;
-          padding-bottom: 10px; }
+          font-size: 50pt;
+          font-weight: 500; }
       #visual_pane .main_menu li {
         opacity: .6;
         font-size: 35pt;
-        font-weight: 100;
-        letter-spacing: 3pt;
-        padding-bottom: 15px; }
+        font-weight: lighter;
+        letter-spacing: 2pt;
+        padding-bottom: 5px; }
       #visual_pane .main_menu li.selected {
-        color: red;
         font-size: 35pt;
         color: darkorange; }
       #visual_pane .main_menu li:first-child {
@@ -90,38 +85,34 @@
     position: static;
     padding: 10px;
     opacity: .7;
-    position: static;
-    height: auto;
+    height: 25%;
     width: 90%;
     margin-right: auto;
     margin-left: auto; }
-    #monolog_pane span#content {
-      z-index: 101;
-      height: auto; }
-      #monolog_pane span#content h4 {
-        padding-top: 10px;
-        padding-left: 10px; }
-      #monolog_pane span#content p {
-        top: 10px;
-        width: 90%;
-        opacity: .5;
-        font-size: 10pt;
-        font-style: italic; }
-      #monolog_pane span#content img#me {
-        opacity: .7;
-        float: right;
-        width: 50px;
-        height: auto;
-        margin-left: 5%; }
+    #monolog_pane span#content h4 {
+      padding-top: 10px;
+      padding-left: 10px; }
+    #monolog_pane span#content p {
+      top: 30px;
+      width: 90%;
+      opacity: .5;
+      font-size: 10pt;
+      font-style: italic; }
+    #monolog_pane span#content img#me {
+      opacity: .7;
+      float: right;
+      width: 50px;
+      height: auto;
+      margin-left: 5%; }
 
   div#dummy_menu {
-    position: relative;
-    top: 10px;
+    position: absolute;
+    bottom: -25%;
     padding: 2px;
-    width: 100%;
+    width: auto;
     height: auto;
-    opacity: .7;
-    font-size: 10pt;
+    opacity: .8;
+    font-size: 9pt;
     font-style: italic;
     letter-spacing: 2pt;
     color: darkorange; }
@@ -130,13 +121,13 @@
       color: darkorange;
       opacity: 1; }
 
-  #footer {
+  #social_media_bar {
     display: block;
     position: absolute;
     width: 100%;
     height: 40px; }
-    #footer ul {
-      opacity: .2;
+    #social_media_bar ul {
+      opacity: .4;
       position: absolute;
       display: block;
       width: 100%;
@@ -145,52 +136,39 @@
       padding-bottom: 0;
       list-style-type: none;
       overflow: hidden; }
-      #footer ul li {
+      #social_media_bar ul li {
         float: left;
         width: 25%;
         align-content: center; }
-        #footer ul li a {
-          opacity: .7;
+        #social_media_bar ul li a {
           width: 100%;
           height: 100%; }
-          #footer ul li a img {
+          #social_media_bar ul li a img {
+            padding: 1px;
             display: block;
             margin: auto;
-            width: 25px;
-            height: 25px; }
-      #footer ul li:nth-of-type(3) {
+            width: 32px;
+            height: 32px; }
+      #social_media_bar ul li:nth-of-type(3) {
         padding-top: 2px; }
-        #footer ul li:nth-of-type(3) a img {
+        #social_media_bar ul li:nth-of-type(3) a img {
           width: auto;
-          height: 22px; }
-    #footer .site_slogan {
-      text-align: center;
-      font-size: 8pt; }
-    #footer .site_version {
-      color: white;
-      position: static;
-      text-align: center;
-      padding: 5px;
-      font-style: italic;
-      font-weight: 500;
-      font-size: 8pt;
-      height: auto;
-      width: auto;
-      opacity: .6; }
-    #footer .icons {
-      padding: 2px;
-      width: auto;
-      height: auto;
-      display: block;
-      position: absolute;
-      background-color: black;
-      right: 2%;
-      bottom: 8px;
-      opacity: .6;
-      vertical-align: middle; }
-      #footer .icons #framework_icon {
-        width: 22px;
-        height: auto; } }
+          height: 29px; }
+
+  div#footer {
+    background-color: black;
+    opacity: .5;
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    height: 80%;
+    font-size: 8pt;
+    font-weight: 500;
+    line-height: 25px;
+    padding-left: auto;
+    padding-right: auto;
+    color: white;
+    text-align: center; } }
 @media (min-width: 701px) and (max-width: 1200px) {
   .main {
     scroll-snap-points-y: repeat(40%);
